2015-08-29 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- external lib: added support to automatically externalize references and
	labels with 'mode=convert with system call'

2015-08-24 Till Tantau <tantau@users.sourceforge.net>

	- Reworked implementation of animations for tikz and started
	on documentation of the backend.

2015-08-20 Till Tantau <tantau@users.sourceforge.net>

	- First complete implementation of animations for tikz! (for 
	svg backend). Documentation still missing, but works nicely.

2015-08-13 Till Tantau <tantau@users.sourceforge.net>

	- First work on animations for svg. Added commands in pgfsys
	and added module pgfmoduleanimations. No documnetation yet.
	
2015-08-07 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- Release 3.0.1!	

2015-08-03 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed regression introduced for pgf 3.0.0 (bug #149): leading empty
	lines at the beginning of plot files disabled '-- plot'
	- fixed bug #291 (missing white space trimming in node labels)
	- fixed bug #313 (alias option did not respect name prefix/suffix)
	- fixed bug #341 ("is in pic" was not reset)
	- fixed bug #365 (caused by missing adoption after copy-paste in tikzlibraryfolding)
	- fixed bug #315/316 by applying the suggested patch and verifying it

2015-06-12 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed fpu math functions for int, ceil, and floor
	- added \pgfmathlogtwo and \pgfmathlogten as requested in bug #359


2015-06-06 Till Tantau <tantau@users.sourceforge.net>

	- Fixed problem in gd: Creating more than about 15 vertices
	inside a graph drawing algorithm was impossible since this
	created too many text input levels. Reorganized the interplay
	between tex and lua for the coroutine so that no input levels
	are created.

2015-06-05 Till Tantau <tantau@users.sourceforge.net>

	- Added number nodes option to graph lib.
	