@@ -77,7 +77,8 @@ local comma_pattern = P(",") * space_pattern
 
 ----------------
 local TermOp = C(S("+-")) * space_pattern
-local RelationalOp = C( P"==" + P"!=" + P"<=" + P">=" + P"<" + P">" ) * space_pattern
+local EqualityOp = C( P"==" + P"!=" ) * space_pattern
+local RelationalOp = C( P"<=" + P">=" + P"<" + P">" ) * space_pattern
 local FactorOp = C(S("*/")) * space_pattern
 
 -- Grammar
@@ -170,11 +171,18 @@ local function postfix_eval(prefix, op, arg)
 	return result
 end
 
-local function relational_eval(v1, op, v2)
+local function equality_eval(v1, op, v2)
 	local fct
 	if (op == "==") then fct = pgfluamathfunctions.equal
 	elseif (op == "!=") then fct = pgfluamathfunctions.notequal
-	elseif (op == "<") then fct = pgfluamathfunctions.less
+	else
+		error("This function must not be invoked for operator "..op)
+	end
+	return fct(v1,v2)
+end
+local function relational_eval(v1, op, v2)
+	local fct
+	if (op == "<") then fct = pgfluamathfunctions.less
 	elseif (op == ">") then fct = pgfluamathfunctions.greater
 	elseif (op == ">=") then fct = pgfluamathfunctions.notless
 	elseif (op == "<=") then fct = pgfluamathfunctions.notgreater
@@ -264,6 +272,7 @@ local initialRule = V"initial"
 
 local Summand = V"Summand"
 local Relational = V"Relational"
+local Equality = V"Equality"
 local LogicalOr = V"LogicalOr"
 local LogicalAnd = V"LogicalAnd"
 
@@ -299,11 +308,11 @@ local G = P{ "initialRule",
 	initialRule = space_pattern* Exp * -1;
 	-- ternary operator (or chained ternary operators):
 	-- FIXME : is this chaining a good idea!?
-	Exp = Cf( Relational * Cg(P"?" * space_pattern * Relational * P":" *space_pattern * Relational )^0, ternary_eval) ;
-	-- FIXME : do we really allow something like " 1 == 1 != 2" ? I would prefer (1==1) != 2 !?
-	Relational = Cf(LogicalOr * Cg(RelationalOp * LogicalOr)^0, relational_eval);
+	Exp = Cf( LogicalOr * Cg(P"?" * space_pattern * LogicalOr * P":" *space_pattern * LogicalOr )^0, ternary_eval) ;
 	LogicalOr = Cf(LogicalAnd * (P"||" * space_pattern * LogicalAnd)^0, pgfluamathfunctions.orPGF);
-	LogicalAnd = Cf(Summand * (P"&&" * space_pattern * Summand)^0, pgfluamathfunctions.andPGF);
+	LogicalAnd = Cf(Equality * (P"&&" * space_pattern * Equality)^0, pgfluamathfunctions.andPGF);
+	Equality = Cf(Relational * Cg(EqualityOp * Relational)^0, equality_eval);
+	Relational = Cf(Summand * Cg(RelationalOp * Summand)^0, relational_eval);
 	Summand = Cf(Term * Cg(TermOp * Term)^0, eval) ;
 	Term = Cf(Prefix * Cg(FactorOp * Prefix)^0, eval);
 	Prefix = prefix_operator_pattern + Postfix;
