@@ -47,6 +47,11 @@ X
 }
 
 \newcount\numErrors
+
+% #1: options
+% #2: expression
+% #3: expected result
+% #4: expected 'units declared' (1 or 0)
 \def\parsertest{\pgfutil@ifnextchar[\parsertest@{\parsertest@[]}}%
 \def\parsertest@[#1]#2#3#4{%
 	\begingroup
@@ -207,6 +212,7 @@ end
 \parsertest{sin(2*pi r)}{-0.0}{0}
 \parsertest{1.5707963267949r + 1.5707963267949r}{180.0}{0}
 \parsertest{1 ? 42 : 0}{42.0}{0}
+\parsertest{0 ? 42 : 0}{0.0}{0}
 \parsertest{-1 + 1 ? 42 : 0}{0.0}{0}
 \parsertest{1 + (1 ? 42 : 0)}{43.0}{0}
 \parsertest{1 ? 42 : 0 ? 5 : 6}{5.0}{0}
@@ -312,6 +318,21 @@ end
 \parsertest{true}{1.0}{0}
 \parsertest{veclen(12,5)}{13.0}{0}
 %\parsertest{width(1)}{1.0}{0}
+
+\parsertest{0 <0.1 && 4 <0.1}{0.0}{0}
+\parsertest{0 <0.1 || 4 <0.1}{1.0}{0}
+{
+\pgfkeys{/pgf/declare function={
+	xx=4;
+	yy=4;
+}}
+\parsertest{abs(xx-yy)<0.1 ? -42 : 42}{-42.0}{0}
+\parsertest{abs(xx-yy)<0.1 || abs(xx-0.5)<0.1}{1.0}{0}
+\parsertest{0 <0.1 || 4 <0.1}{1.0}{0}
+\parsertest{(abs(xx-yy)<0.1) || (abs(xx-0.5)<0.1)}{1.0}{0}
+\parsertest{abs(xx-yy)<0.1 || abs(xx-0.5)<0.1 ? -42 : 42}{-42.0}{0}
+\parsertest{4 < 2 || 5==5 ? -42 : 42}{-42.0}{0}
+}
 
 \parsertest{1pt}{1.0}{1}
 \parsertest{1mm}{2.845261}{1}
