@@ -1,3 +1,7 @@
+2015-09-06 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
+
+	- fixed bug in luamath library
+
 2015-08-29 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
 
 	- external lib: added support to automatically externalize references and
